@@ -131,11 +131,12 @@ struct sys_special_s
 /* struct for postgres specific details, get that when connected to postgres server */
 struct pg_special_s
 {
-    bool pg_is_in_recovery;			/* is postgres a standby? - true/false */
-    unsigned int av_max_workers;		/* autovacuum_max_workers GUC value */
-    unsigned int pg_max_conns;                  /* max_connections GUC value */
-    char pg_version_num[XS_BUF_LEN];		/* postgresql version XXYYZZ format */
-    char pg_version[XS_BUF_LEN];		/* postgresql version X.Y.Z format */
+    bool pg_is_in_recovery;             /* is postgres a standby? - true/false */
+    unsigned int av_max_workers;        /* autovacuum_max_workers GUC value */
+    unsigned int pg_max_conns;          /* max_connections GUC value */
+    unsigned int pg_max_preps;          /* max_prepared_transactions GUC value */
+    char pg_version_num[XS_BUF_LEN];    /* postgresql version XXYYZZ format */
+    char pg_version[XS_BUF_LEN];        /* postgresql version X.Y.Z format */
 };
 
 #define PG_SPECIAL_SIZE (sizeof(struct pg_special_s))
